--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,8 +78,15 @@ services:
       - meilidata:/data.ms
     networks:
       - nix
-    depends_on:
-      - mysql
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: nix-mailhog
+    ports:
+      - "8003:1025"
+      - "8100:8025"
+    networks:
+      - nix
 
 networks:
   nix:
