Replace mailisearch to %LIKE% query

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,16 +68,16 @@ services:
       - php
       - phpmyadmin
 
-  meilisearch:
-    image: getmeili/meilisearch:latest
-    container_name: nix-meilisearch
-    restart: always
-    ports:
-      - 7700:7700
-    volumes:
-      - meilidata:/data.ms
-    networks:
-      - nix
+#  meilisearch:
+#    image: getmeili/meilisearch:latest
+#    container_name: nix-meilisearch
+#    restart: always
+#    ports:
+#      - 7700:7700
+#    volumes:
+#      - meilidata:/data.ms
+#    networks:
+#      - nix
 
   mailhog:
     image: mailhog/mailhog:latest
@@ -97,5 +97,5 @@ volumes:
     driver: local
   phpmyadmindata:
     driver: local
-  meilidata:
-    driver: local
+#  meilidata:
+#    driver: local
