--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
+/public/posters
 /storage/*.key
 /vendor
 .env
@@ -14,3 +15,4 @@ yarn-error.log
 .editorconfig
 /.idea
 /data.ms
+/storage/app/posters
