--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -3,6 +3,7 @@ FROM php:7.4-fpm
 # Arguments defined in docker-compose.yml
 ARG user
 ARG uid
+ARG gid
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -26,8 +27,8 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Create system user to run Composer and Artisan Commands
 RUN useradd -G www-data,root -u $uid -d /home/$user $user
 RUN mkdir -p /home/$user/.composer && \
-    chown -R $uid:$uid /home/$user && \
-    chown -R $uid:$uid /var/www
+    chown -R $uid:$gid /home/$user && \
+    chown -R $uid:$gid /var/www
 
 # Set working directory
 WORKDIR /var/www
